@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007,2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -50,6 +50,7 @@ protected:
 	afx_msg LRESULT		OnRevSelected(WPARAM wParam, LPARAM lParam);
 	afx_msg LRESULT		OnRevSelectedOneRange(WPARAM wParam, LPARAM lParam);
 	afx_msg void		OnBnClickedShowlogwc();
+	afx_msg LRESULT		OnWCStatus(WPARAM wParam, LPARAM lParam);
 
 	DECLARE_MESSAGE_MAP()
 
