@@ -74,6 +74,7 @@ void CMergeWizardTree::DoDataExchange(CDataExchange* pDX)
 
 
 BEGIN_MESSAGE_MAP(CMergeWizardTree, CMergeWizardBasePage)
+	ON_MESSAGE(WM_TSVN_MAXREVFOUND, &CMergeWizardTree::OnWCStatus)
 	ON_REGISTERED_MESSAGE(WM_REVSELECTED, OnRevSelected)
 	ON_BN_CLICKED(IDC_BROWSE, OnBnClickedBrowse)
 	ON_BN_CLICKED(IDC_BROWSE2, OnBnClickedBrowse2)
@@ -154,6 +155,8 @@ BOOL CMergeWizardTree::OnInitDialog()
 	AddAnchor(IDC_MERGETREEWCGROUP, TOP_LEFT, TOP_RIGHT);
 	AddAnchor(IDC_WCEDIT, TOP_LEFT, TOP_RIGHT);
 	AddAnchor(IDC_SHOWLOGWC, TOP_RIGHT);
+
+	StartWCCheckThread(((CMergeWizard*)GetParent())->wcPath);
 
 	return TRUE;
 }
@@ -361,6 +364,8 @@ LPARAM CMergeWizardTree::OnRevSelected(WPARAM wParam, LPARAM lParam)
 
 LRESULT CMergeWizardTree::OnWizardNext()
 {
+	StopWCCheckThread();
+
 	if (!CheckData(true))
 		return -1;
 
@@ -408,4 +413,19 @@ void CMergeWizardTree::OnCbnEditchangeUrlcombo()
 void CMergeWizardTree::OnCbnEditchangeUrlcombo2()
 {
 	GetDlgItem(IDC_BROWSE2)->EnableWindow(!m_URLCombo2.GetString().IsEmpty());
+}
+
+LPARAM CMergeWizardTree::OnWCStatus(WPARAM wParam, LPARAM /*lParam*/)
+{
+	if (wParam)
+	{
+		CString text(MAKEINTRESOURCE(IDS_MERGE_WCDIRTY));
+		EDITBALLOONTIP bt;
+		bt.cbStruct = sizeof(bt);
+		bt.pszText  = text;
+		bt.pszTitle = NULL;
+		bt.ttiIcon = TTI_WARNING;
+		SendDlgItemMessage(IDC_WCEDIT, EM_SHOWBALLOONTIP, 0, (LPARAM)&bt);
+	}
+	return 0;
 }
